# Jupyter2Prod

./: Dockerfile  README.md  pyproject.toml  requirements.txt
notebooks/classification_model/: pyproject.toml
src/: cfg.py  idx2label.json  main.py
