[tool.poetry]
name = "jupyter2prod"
version = "0.1.0"
description = ""
authors = ["MattStHilaire"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.1"
pillow = "^10.4.0"
numpy = "^2.0.0"
torch = "^2.3.1"
timm = "^1.0.7"
uvicorn = "^0.30.1"
gunicorn = "^22.0.0"

[tool.poetry.scripts]
start = "src.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
